--- a/.github/workflows/docker-image-amd64.yml
+++ b/.github/workflows/docker-image-amd64.yml
@@ -9,6 +9,10 @@ on:
       name:
         description: 'reason'
         required: false
+env:
+  REGISTRY: ghcr.io
+  IMAGE: blee0036/new_api
+
 jobs:
   push_to_registries:
     name: Push Docker image to multiple registries
@@ -24,26 +28,21 @@ jobs:
         run: |
           git describe --tags > VERSION 
 
-      - name: Log in to Docker Hub
-        uses: docker/login-action@v2
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
-
       - name: Log in to the Container registry
-        uses: docker/login-action@v2
+        uses: docker/login-action@v3
         with:
-          registry: ghcr.io
+          registry: ${{ env.REGISTRY }}
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Extract metadata (tags, labels) for Docker
         id: meta
-        uses: docker/metadata-action@v4
+        uses: docker/metadata-action@v5
         with:
-          images: |
-            calciumion/new-api
-            ghcr.io/${{ github.repository }}
+          images: ${{ env.REGISTRY }}/${{ env.IMAGE }}
+          tags: |
+            type=raw,value=latest
+            type=ref,event=tag
 
       - name: Build and push Docker images
         uses: docker/build-push-action@v3
