--- a/.github/workflows/heroku.yml
+++ b/.github/workflows/heroku.yml
@@ -1,4 +1,4 @@
-name: Deploy
+name: HeroKu
 
 on:
   push:
@@ -15,4 +15,5 @@ jobs:
           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
           heroku_app_name: ${{secrets.HEROKU_APP_NAME}}
           heroku_email: ${{secrets.HEROKU_EMAIL}}
+          stack: "container"
           usedocker: true
